# DeepUnderstandingOfDeepLearning

./: .gitignore  main.py  pyproject.toml
ANN/: DUDL_ANN_breadthVsDepth.ipynb  DUDL_ANN_classifyQwerties.ipynb  DUDL_ANN_codeChallengeQwerties.ipynb  DUDL_ANN_codeChallengeSeq2class.ipynb  DUDL_ANN_learningrates.ipynb  DUDL_ANN_multilayer.ipynb  DUDL_ANN_multioutput.ipynb  DUDL_ANN_nHiddenUnits.ipynb  DUDL_ANN_numParameters.ipynb  DUDL_ANN_regression.ipynb  DUDL_ANN_seqVsClass.ipynb
FFN/: DUDL_FFN_CodeChallengeBreadthDepth.ipynb  DUDL_FFN_CodeChallenge_binMNIST.ipynb  DUDL_FFN_CodeChallenge_missing7.ipynb  DUDL_FFN_CodeChallenge_normalization.ipynb  DUDL_FFN_CodeChallenge_optimizers.ipynb  DUDL_FFN_FFNonMNIST.ipynb  DUDL_FFN_aboutMNIST.ipynb  DUDL_FFN_scrambledMNIST.ipynb  DUDL_FFN_shiftedMNIST.ipynb  DUDL_FFN_weightHistograms.ipynb
FFNmilestone/: DUDL_FFNmilestone_project1.ipynb
autoencoders/: DUDL_autoenc_denoisingMNIST.ipynb
data/: DUDL_data_CodeChallengeUnbalanced.ipynb  DUDL_data_dataVsDepth.ipynb  DUDL_data_datasetLoader.ipynb  DUDL_data_featureAugmentation.ipynb  DUDL_data_noiseAugmentation.ipynb  DUDL_data_oversampling.ipynb  DUDL_data_saveLoadModels.ipynb  DUDL_data_saveTheBest.ipynb  trainedModel.pt
math/: DUDL_math_argmin.ipynb  DUDL_math_derivatives1.ipynb  DUDL_math_derivatives2.ipynb  DUDL_math_dotproduct.ipynb  DUDL_math_entropy.ipynb  DUDL_math_log.ipynb  DUDL_math_matrixMult.ipynb  DUDL_math_meanvar.ipynb
measurePerformance/: DUDL_measurePerformance_APRF.ipynb  DUDL_measurePerformance_APRFexample1.ipynb  DUDL_measurePerformance_example2.ipynb  (+2 more)
(+20 files in other folders)
